--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prismicio/client": "5.1.0",
+    "fabric": "^5.3.0",
     "next": "12.1.0",
     "prismic-dom": "^2.2.7",
     "react": "17.0.2",
